--- a/campaigns-edit.html
+++ b/campaigns-edit.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
+        integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Bootstrap CSS -->
@@ -19,18 +21,18 @@
 
 <body>
       <!-- header start here -->
-      <div id="header"></div>
+      <div id="header" class="position-relative" style="z-index: 9;"></div>
       <!-- header end here -->
       <!-- body start here -->
-    <section class="content-view mt-2 vh-100">
+      <section class="content-view vh-100 mt-2">
         <div class="container-xxl">
-            <div class="row border">
+            <div class="row ">
                <!-------Sidebar Start------>
-               <div class="col-md-3 bg-light p-4 d-lg-inline-block d-none">
-                <div id="sidebar"></div>
+               <div class="col-md-3 px-3 py-4 d-lg-inline-block d-none border border-end-0" id="mySidebar">
+                <div id="sidebar" class="sidebar-hide"></div>
             </div>
             <!-------Sidebar End------>
-                <div class="col-md-9 bg-white p-4">
+            <div class="col bg-white p-4 border position-relative ps-lg-5">
                     <div class="d-flex justify-content-between align-items-center">
                         <h1 class="fs-3 mb-0">Create New Campaign</h1>
                         <i class="fa fa-compass pull-right fs-3"></i>
