--- a/campaigns.html
+++ b/campaigns.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
+        integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Bootstrap CSS -->
@@ -19,25 +21,24 @@
 
 <body> 
      <!-- header start here -->
-     <div id="header"></div>
+     <div id="header" class="position-relative" style="z-index: 9;"></div>
      <!-- header end here -->
      <!-- body start here -->
-    <section class="content-view mt-2 vh-100">
+     <section class="content-view vh-100 mt-2">
         <div class="container-xxl">
-            <div class="row border">
+            <div class="row ">
                  <!-------Sidebar Start------>
-                 <div class="col-md-3 bg-light p-4 d-lg-inline-block d-none">
-                    <div id="sidebar"></div>
+                 <div class="col-md-3 px-3 py-4 d-lg-inline-block d-none border border-end-0" id="mySidebar">
+                    <div id="sidebar" class="sidebar-hide"></div>
                 </div>
                 <!-------Sidebar End------>
-                <div class="col-md-9 bg-white p-4">
+                <div class="col bg-white p-4 border position-relative ps-lg-5">
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1 class="fs-3 mb-0">Campaigns <a href="campaigns-add.html"> <button type="button" class="btn btn-success ms-2"><i
-                                    class="fa fa-plus-circle"></i> Create</button></a></h1>
+                        <h1 class="fs-3 mb-0">Campaigns <a href="campaigns-add.html"> <button type="button" class="btn btn-success ms-2"><i class="bi bi-plus-circle"></i> Create</button></a></h1>
                         <i class="fa-sharp fa-solid fa-shield-halved fs-3"></i>
                     </div>
                     <p class="mt-2">This page if visible to staff only.</p>
-                    <div class="table-layout mt-4">
+                    <div class="table-layout mt-4 overflow-auto">
                         <table class="table table-bordered">
                             <thead>
                                 <tr>
@@ -57,9 +58,9 @@
                                   <td>12</td>
                                   <td>True</td>
                                   <td class="text-end">
-                                    <button type="button" class="btn btn-info"><i class="fa fa-fw fa-info-circle text-white"></i></button>
-                                    <a href="campaigns-edit.html"><button type="button" class="btn btn-warning"><i class="fa fa-edit text-white"></i></button></a>
-                                    <button type="button" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
+                                    <button type="button" class="btn btn-info"><i class="bi bi-info-circle-fill text-white"></i></button>
+                                    <a href="campaigns-edit.html"><button type="button" class="btn btn-warning"><i class="bi bi-pencil-fill text-white"></i></button></a>
+                                    <a href="delete.html"> <button type="button" class="btn btn-danger"><i class="bi bi-trash text-white"></i></button></a>
                                   </td>
                                 </tr>
                                 <tr>
@@ -69,9 +70,9 @@
                                     <td>12</td>
                                     <td>True</td>
                                     <td class="text-end">
-                                      <button type="button" class="btn btn-info"><i class="fa fa-fw fa-info-circle text-white"></i></button>
-                                      <a href="campaigns-edit.html"><button type="button" class="btn btn-warning"><i class="fa fa-edit text-white"></i></button></a>
-                                      <button type="button" class="btn btn-danger"><i class="fa-regular fa-trash-can"></i></button>
+                                      <button type="button" class="btn btn-info"><i class="bi bi-info-circle-fill text-white"></i></button>
+                                      <a href="campaigns-edit.html"><button type="button" class="btn btn-warning"><i class="bi bi-pencil-fill text-white"></i></button></a>
+                                      <a href="delete.html"> <button type="button" class="btn btn-danger"><i class="bi bi-trash text-white"></i></button></a>
                                     </td>
                                   </tr>
                               </tbody>
