--- a/footer.html
+++ b/footer.html
@@ -1,40 +1,23 @@
 <!-- footer start here -->
-<footer class="footer py-5 mt-5 bg-dark ">
-    <div class="container-xxl">
-        <div class="row align-items-center">
-            <div class="col-sm-7">
-
-                <div class="d-md-flex align-items-center">
-                    <div class="flex-shrink-0 mb-md-0 mb-2">
-                        <img class="mt-3 mx-3" src="images/by-sa.svg"
-                            alt="Creative Commons Attribution-ShareAlike Logo">
-                    </div>
-                    <div class="flex-grow-1 ms-3">
-                        <p class="text-white m-0">Want to contact us? Visit our
-                            <a href="https://github.com/bytedeck/bytedeck/discussions">discussion page</a>.
-                        </p>
-                        <p class="text-white m-0">Except where otherwise noted, this site is licensed under a
-                            <a rel="license" href="" class="d-block">Creative Commons
-                                Attribution-ShareAlike 3.0 Unported License</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-5">
-                <div class="d-md-flex align-items-center">
-                    <div class="flex-shrink-0 mb-md-0 mb-2">
-                        <img width="50" class="mt-3" src="images/GNU.png">
-                    </div>
-                    <div class="flex-grow-1 ms-3">
-                        <p class="text-white m-0">The code that runs this site is free and open source.
-                            It uses the <a href="https://www.gnu.org/licenses/quick-guide-gplv3.html">GNU GPL v3
-                                license</a> and is available to anyone for free through
-                            <a href="https://github.com/bytedeck/bytedeck">Github</a>. You are free to download,
-                            modify, and distribute the code as long as you share it in the same manner!
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <footer class="footer py-3 mt-2 mb-0 bg-dark">
+    <div class="bg-dark">
+        <ul class=" justify-content-center me-auto mb-2 mb-lg-0 d-flex ">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-twitter text-white"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-linkedin text-white"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-instagram text-white"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-envelope-at text-white"></i></a>
+            </li>
+          </ul>
+        <p class="text-light text-center mt-1 mb-0 ">
+            © Copyright 2023 bytedeck All rights reserved.
+        </p>
+                
     </div>
 </footer>
