--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    <!-- CDN link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
+        integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap 5 CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>bytedeck-BS5
@@ -18,22 +19,23 @@
 </head>
 
 <body>
-    <!-- header start here -->
-    <div id="header"></div>
-    <!-- header end here -->
+    <!-- header start -->
+    <div id="header" class="position-relative" style="z-index: 9;"></div>
+
     <!-- body start here -->
-    <section class="content-view mt-2 vh-100">
+    <section class="content-view vh-100 mt-2">
         <div class="container-xxl">
-            <div class="row border">
+            <div class="row justify-content-center">
                 <!-------Sidebar Start------>
-                <div class="col-md-3 bg-light p-4 d-lg-inline-block d-none">
-                    <div id="sidebar"></div>
+                <div class="col-md-3 px-3 py-4 d-lg-inline-block d-none border border-end-0" id="mySidebar">
+                    <div id="sidebar" class="sidebar-hide"></div>
                 </div>
                 <!-------Sidebar End------>
-                <div class="col-md-9 bg-white p-4">
+                <div class="col bg-white p-4 border position-relative ps-lg-5">
+                    
                     <div class="d-flex justify-content-between align-items-center">
                         <h1 class="fs-3 mb-0">Quest Approval</h1>
-                        <i class="fa-sharp fa-solid fa-shield-halved fs-3"></i>
+                        <i class="bi bi-shield-shaded fs-3"></i>
                     </div>
                     <div class="nav-view mt-4">
                         <nav>
@@ -78,19 +80,17 @@
             </div>
         </div>
     </section>
-    <!-- body end here -->
-    <!-- footer start here -->
+
+    <!-- footer start -->
     <div id="footer"></div>
-    <!-- footer end here -->
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
-        integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
+        // component load function
         $(function () {
             $("#header").load("header.html");
             $("#sidebar").load("sidebar.html");
@@ -98,5 +98,4 @@
         });
     </script>
 </body>
-
 </html>
