--- a/students.html
+++ b/students.html
@@ -6,44 +6,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- link CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/bootstrap-icons.svg">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.4/font/bootstrap-icons.min.css"
+        integrity="sha512-yU7+yXTc4VUanLSjkZq+buQN3afNA4j2ap/mxvdr440P5aW9np9vIr2JMZ2E5DuYeC9bAoH9CuCR7SJlXAa4pg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link href="https://unpkg.com/bootstrap-table@1.21.4/dist/bootstrap-table.min.css" rel="stylesheet">
-
-
     <title>bytedeck-BS5
     </title>
 </head>
 
 <body>
       <!-- header start here -->
-      <div id="header"></div>
+      <div id="header" class="position-relative" style="z-index: 9;"></div>
       <!-- header end here -->
       <!-- body start here -->
-    <section class="content-view mt-2 vh-100">
+    <section class="content-view vh-100 mt-2">
         <div class="container-xxl">
-            <div class="row border">
+            <div class="row justify-content-center ">
                 <!-------Sidebar Start------>
-                <div class="col-md-3 bg-light p-4 d-lg-inline-block d-none">
-                    <div id="sidebar"></div>
-                </div>
+                <div class="col-md-3 px-3 py-4 d-lg-inline-block d-none border border-end-0" id="mySidebar">
+                  <div id="sidebar" class="sidebar-hide"></div>
+              </div>
                 <!-------Sidebar End------>
-                <div class="col-md-9 bg-white p-4">
+                <div class="col bg-white p-4 border position-relative ps-lg-5 overflow-auto">
+                  <h1 class="fs-3 mb-0">Students</h1>
                     <div class="d-flex justify-content-between align-items-center">
-                        <h1 class="fs-3 mb-0">Students
-                            <div class="btn-group ms-3">
-                                <a href="#" class="btn btn-primary active" aria-current="page">Current Semester</a>
-                                <a href="#" class="btn btn-primary">All Active</a>
-                                <a href="#" class="btn btn-primary">Inactive</a>
-                                <a href="#" class="btn btn-primary">Staff</a>
+                      <div class="nav-view mt-4">
+                        <nav>
+                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Current Semester</button>
+                                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">All Active</button>
+                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Inactive</button>
+                                <button class="nav-link" id="nav-flg-tab" data-bs-toggle="tab" data-bs-target="#nav-flg" type="button" role="tab" aria-controls="nav-flg" aria-selected="false">Staff</button>
                             </div>
-                        </h1>
+                        </nav>
+                      </div>
                         <i class="fa fa-users fs-3"></i>
                     </div>
                     <div class="table-layout mt-4">
