header and sidebar ui issue fix

--- a/sidebar.html
+++ b/sidebar.html
@@ -16,13 +16,13 @@
             </button>
             <div class="collapse" id="dashboard-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small border">
-                    <li><a class="dropdown-item border-bottom py-2" href="campaigns.html"><i
-                                class="bi bi-compass-fill me-1"></i> Campaigns</a></li>
-                    <li><a class="dropdown-item border-bottom  py-2" href="#"> <i
-                                class="bi bi-shield-shaded me-1 me-1"></i>
+                    <li><a class="dropdown-item border-bottom py-2 px-4" href="campaigns.html"><i
+                                class="bi bi-compass-fill me-2"></i> Campaigns</a></li>
+                    <li><a class="dropdown-item border-bottom  py-2 px-4" href="#"> <i
+                                class="bi bi-shield-shaded me-1 me-2"></i>
                             Draft Quests</a>
                     </li>
-                    <li><a class="dropdown-item py-2" href="#"><i class="bi bi-shield-shaded me-1 me-1"></i> Common
+                    <li><a class="dropdown-item py-2 px-4" href="#"><i class="bi bi-shield-shaded me-1 me-2"></i> Common
                             Quest
                             Info</a></li>
                 </ul>
@@ -37,8 +37,8 @@
             </button>
             <div class="collapse" id="dashboard-collapse1">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small border">
-                    <li><a class="dropdown-item py-2" href="#">
-                            <i class="bi bi-patch-check-fill me-1"></i> Badge Types</a></li>
+                    <li><a class="dropdown-item py-2 px-4" href="#">
+                            <i class="bi bi-patch-check-fill me-2"></i> Badge Types</a></li>
                 </ul>
             </div>
         </li>
