--- a/header.html
+++ b/header.html
@@ -77,8 +77,7 @@
                                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small bg-white border rounded"
                                         aria-labelledby="navbarDropdown">
                                         <li>
-                                            <a class="dropdown-item" href="/config/"><i class="bi bi-sliders me-1"></i>
-                                                Site Configuration</a>
+                                            <a class="dropdown-item" href="/config/"><i class="bi bi-sliders me-1"></i> Site Configuration</a>
                                         </li>
                                         <li>
                                             <hr class="dropdown-divider">
@@ -87,32 +86,31 @@
                                         <li><a class="dropdown-item" href="/courses/ranks/"><i
                                                     class="bi bi-star-fill me-1"></i> Ranks</a>
                                         </li>
-                                        <li><a class="dropdown-item" href="/tags/"><i class="bi bi-tags-fill"></i>
-                                                &nbsp;Tags</a></li>
+                                        <li><a class="dropdown-item" href="/tags/"><i class="bi bi-tags-fill"></i>  &nbsp;Tags</a></li>
                                         <li><a class="dropdown-item" href="/quests/campaigns/"><i
                                                     class="bi bi-compass-fill me-1"></i> Campaigns</a></li>
                                         <li><a class="dropdown-item" href="/courses/blocks/"><i
-                                                    class="bi bi-people me-1"></i>Groups</a></li>
+                                                    class="bi bi-people me-1"></i> Groups</a></li>
                                         <li><a class="dropdown-item" href="/courses/list/"><i
-                                                    class="bi bi-book-half me-1"></i>Courses</a></li>
+                                                    class="bi bi-book-half me-1"></i> Courses</a></li>
                                         <li><a class="dropdown-item" href="/courses/semesters/">
                                                 <i class="bi bi-calendar me-1"></i> Semesters</a></li>
                                         <li role="separator" class="divider"></li>
-                                        <li class="dropdown-header">Custom Pages</li>
+                                        <li class="dropdown-header"> Custom Pages</li>
                                         <li><a class="dropdown-item" href="/utilities/custom-pages/"><i
                                                     class="bi bi-list-ul me-1"></i> Pages</a></li>
                                         <li><a class="dropdown-item" href="/utilities/custom-pages/create/"><i
-                                                    class="bi bi-book-fill me-1"></i>Create Page</a></li>
+                                                    class="bi bi-book-fill me-1"></i> Create Page</a></li>
                                         <li role="separator" class="divider"></li>
                                         <li class="dropdown-header">Advanced</li>
                                         <li><a class="dropdown-item" href="/admin"><i
-                                                    class="bi bi-database me-1"></i>Django Admin</a></li>
+                                                    class="bi bi-database me-1"></i> Django Admin</a></li>
                                         <li role="separator" class="divider"></li>
                                         <li class="dropdown-header">ByteDeck</li>
                                         <li><a class="dropdown-item"
                                                 title="Ask a question, report a bug, or request a feature!"
                                                 href="https://github.com/bytedeck/bytedeck/discussions">
-                                                <i class="bi bi-chat-fill me-1"></i>ByteDeck Forum</a>
+                                                <i class="bi bi-chat-fill me-1"></i> ByteDeck Forum</a>
                                         </li>
                                         <li><a class="dropdown-item"
                                                 href="https://github.com/bytedeck/bytedeck/blob/develop/CHANGELOG.md"><i
