created profile and portfolio pages

--- a/header.html
+++ b/header.html
@@ -1,3 +1,7 @@
+<link href="./css/style.css" rel="stylesheet"> 
+<!-- style link for all pages common -->
+
+
 <header class="navbar-light bg-light border-bottom py-2">
     <div class="container-xxl">
         <!-- Navbar -->
