--- a/sidebar.html
+++ b/sidebar.html
@@ -2,7 +2,8 @@
     <div class="d-flex justify-content-between border-bottom border-gray">
         <img id="logo" src="images/logo-1" class="img img-rounded img-responsive center-block w-100 pb-3"
             alt="My Byte Deck Banner">
-            <img id="logo2" src="images/logo.png" class="img img-rounded img-responsive center-block w-100 pb-3" alt="MDB Logo" loading="lazy" style="display: none;" />
+        <img id="logo2" src="images/logo.png" class="img img-rounded img-responsive center-block w-100 pb-3"
+            alt="MDB Logo" loading="lazy" style="display: none;" />
     </div>
     <button type="button" onclick="openNav()" class="bg-light border position-absolute top-0 border-start-0"
         style="right: -46px; z-index: 9;"><i class="bi bi-arrow-left-short"></i></button>
@@ -56,11 +57,11 @@
                 class="text-decoration-none text-reset align-items-center d-flex"> <i
                     class="bi bi-people-fill me-3 fs-6 text-dark"></i> Students</a></li>
 
-        <li class="list-group-item border-0 dropdown-item"> <a href="#"
+        <li class="list-group-item border-0 dropdown-item"> <a href="profile.html"
                 class="text-decoration-none text-reset align-items-center d-flex">
                 <i class="bi bi-person-fill me-3 text-dark fs-6"></i> Profile
             </a></li>
-        <li class="list-group-item border-0 dropdown-item rounded"><a href="#"
+        <li class="list-group-item border-0 dropdown-item rounded"><a href="portfolio.html"
                 class="text-decoration-none text-reset align-items-center d-flex">
                 <i class="bi bi-image me-3 text-dark fs-6"></i> Portfolio
             </a></li>
@@ -100,8 +101,8 @@
         }
     }
 
-     // sidebar min function
-     const element1 = document.getElementById("logo");
-     const element2 = document.getElementById("logo2");
-  
+    // sidebar min function
+    const element1 = document.getElementById("logo");
+    const element2 = document.getElementById("logo2");
+
 </script>
