bg color changes on profile and portfolio

--- a/profile.html
+++ b/profile.html
@@ -76,7 +76,7 @@
                     <div class="row mt-3 align-items-stretch">
                         <div class="col-md-6">
                             <div class="card h-100">
-                                <div class="card-header bg-primary text-white d-flex justify-content-between">
+                                <div class="card-header bg-light d-flex justify-content-between">
                                     <strong>General</strong>
                                 </div>
                                 <div class="card-body  bg-white">
@@ -91,7 +91,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="card">
-                                <div class="card-header bg-primary text-white d-flex justify-content-between">
+                                <div class="card-header bg-light d-flex justify-content-between">
                                     <strong> Badges <button type="button" class="btn btn-warning btn-sm ms-2"><b>Grant</b></button></strong>
                                     <i class="bi bi-patch-check-fill"></i>
                                 </div>
@@ -100,7 +100,7 @@
                                 </div>
                             </div>
                             <div class="card mt-3">
-                                <div class="card-header bg-primary text-white d-flex justify-content-between">
+                                <div class="card-header bg-light d-flex justify-content-between">
                                     <strong> XP earned by Tag <button type="button" class="btn btn-warning btn-sm ms-2"><b><i class="bi bi-sort-up-alt"></i></b></button></strong>
                                     <i class="bi bi-bookmarks-fill"></i>
                                 </div>
@@ -113,7 +113,7 @@
                     <div class="row mt-3 align-items-stretch">
                         <div class="col-md-6">
                             <div class="card h-100">
-                                <div class="card-header bg-primary text-white d-flex justify-content-between">
+                                <div class="card-header bg-light d-flex justify-content-between">
                                     <strong>Courses</strong>
                                     <i class="bi bi-book-fill"></i>
                                 </div>
