--- a/portfolio.html
+++ b/portfolio.html
@@ -51,18 +51,6 @@
                         </div>
                     </div>
                     <div class="card mt-4">
-                        <div class="card-header bg-primary text-white d-flex justify-content-between">
-                           Your portfolio is NOT listed locally.
-                        </div>
-                        <div class="card-body bg-white">
-                            <p class="mt-1">Sharing your portfolio publicy means a link to your portfolio will appear in
-                                our <a href="javascript:void(0)" class="text-decoration-none"><b>public list of student
-                                        portfolios,</b></a> available to anyone who finds the Deck site. <a
-                                    href="javascript:void(0)" class="text-decoration-none"><b>Edit</b></a>
-                                your portfolio to change this setting.</p>
-                        </div>
-                    </div>
-                    <div class="card mt-4">
                         <div class="card-header bg-success text-white d-flex justify-content-between">
                             Personal link
                         </div>
@@ -77,8 +65,20 @@
                         </div>
                     </div>
                     <div class="card mt-4">
-                        <div class="card-header bg-primary text-white d-flex justify-content-between">
-                            Description
+                        <div class="card-header bg-light d-flex justify-content-between">
+                          <strong> Your portfolio is NOT listed locally.</strong>
+                        </div>
+                        <div class="card-body bg-white">
+                            <p class="mt-1">Sharing your portfolio publicy means a link to your portfolio will appear in
+                                our <a href="javascript:void(0)" class="text-decoration-none"><b>public list of student
+                                        portfolios,</b></a> available to anyone who finds the Deck site. <a
+                                    href="javascript:void(0)" class="text-decoration-none"><b>Edit</b></a>
+                                your portfolio to change this setting.</p>
+                        </div>
+                    </div>
+                    <div class="card mt-4">
+                        <div class="card-header bg-light d-flex justify-content-between">
+                            <strong> Description</strong>
                         </div>
                         <div class="card-body bg-white">
                             <p class="mt-1">None
@@ -86,8 +86,8 @@
                         </div>
                     </div>
                     <div class="card mt-4">
-                        <div class="card-header bg-primary text-white d-flex justify-content-between">
-                            Content
+                        <div class="card-header bg-light d-flex justify-content-between">
+                            <strong>Content</strong>
                         </div>
                         <div class="card-body bg-white">
                             <p class="mb-2">This portfolio is empty!</p>
