announcements and map pages created UI

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="card mt-4">
                         <div class="card-header bg-primary text-white d-flex justify-content-between">
-                            Your portfolio is NOT listed locally.
+                           <strong> Your portfolio is NOT listed locally.</strong>
                         </div>
                         <div class="card-body bg-white">
                             <p class="mt-1">Sharing your portfolio locally means a link to the portfolio will appear in
@@ -52,7 +52,7 @@
                     </div>
                     <div class="card mt-4">
                         <div class="card-header bg-success text-white d-flex justify-content-between">
-                            Personal link
+                            <strong> Personal link</strong>
                         </div>
                         <div class="card-body bg-white">
                             <a href="javascript:void(0)"><b>hackerspace.localhost:8000/portfolios/f10999a1-f0c7-4fcc-b38a-827921922145/</b></a>
