--- a/sidebar.html
+++ b/sidebar.html
@@ -44,12 +44,12 @@
             </div>
         </li>
 
-        <li class="list-group-item border-0 dropdown-item rounded"><a href="#"
+        <li class="list-group-item border-0 dropdown-item rounded"><a href="maps.html"
                 class="text-decoration-none text-reset align-items-center d-flex"><i
                     class="bi bi-signpost-2-fill me-3 text-dark fs-6"></i>
                 Maps</a></li>
 
-        <li class="list-group-item border-0 dropdown-item rounded"> <a href="#"
+        <li class="list-group-item border-0 dropdown-item rounded"> <a href="announcements.html"
                 class="text-decoration-none text-reset align-items-center d-flex"><i
                     class="bi bi-newspaper me-3 text-dark fs-6"></i>
                 Announcements</a></li>
